fix batch data train in Xyce & mseloss reduction mean -> sum & xor bias 1 -> 2

--- a/notebooks/eqprop/fast_eval.ipynb
+++ b/notebooks/eqprop/fast_eval.ipynb
@@ -20,8 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_path = \"/home/minsik/ml/logs/train/runs/2024-10-22_16-46-20/checkpoints/epoch_033.ckpt\"\n",
-    "checkpoint = torch.load(ckpt_path)\n",
+    "ckpt_path = \"/home/minsik/ml/logs/train/runs/2024-10-22_22-50-45/checkpoints/epoch_036.ckpt\"\n",
+    "ckpt_path2 = \"/home/minsik/ml/logs/train/runs/2024-10-24_10-56-07/checkpoints/epoch_202.ckpt\"\n",
+    "ckpt_30K_2M = \"/home/minsik/ml/logs/train/runs/2024-10-25_17-20-13/checkpoints/epoch_180.ckpt\"\n",
+    "checkpoint = torch.load(ckpt_30K_2M)\n",
     "# Extract weights from the checkpoint (assuming net.model layers)\n",
     "W1 = checkpoint[\"state_dict\"][\"net.model.0.weight\"]  # First layer weights\n",
     "W2 = checkpoint[\"state_dict\"][\"net.model.1.weight\"]  # Second layer weights\n",
@@ -32,6 +34,16 @@
     "# Print the extracted weights\n",
     "print(\"W1 (First Layer Weights):\", W1)\n",
     "print(\"W2 (Second Layer Weights):\", W2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(W1)\n",
+    "print(W2)"
    ]
   },
   {
@@ -71,8 +83,8 @@
     "    \"A\": 1,\n",
     "    \"beta\": \"0.001\",\n",
     "    \"Diode\": {\n",
-    "        \"Path\": \"/home/minsik/ml/src/core/spice/virtual_diode.lib\",\n",
-    "        \"ModelName\": \"virtual_diode\",\n",
+    "        \"Path\": \"/home/minsik/ml/src/core/spice/1N4148.lib\",\n",
+    "        \"ModelName\": \"1N4148\",\n",
     "        \"Rectifier\": \"BidRectifier\",\n",
     "    },\n",
     "    \"noise\": 0,\n",
@@ -98,6 +110,15 @@
    "outputs": [],
    "source": [
     "spice_utils.SPICENNParser.updateWeight(circuit, W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(circuit)"
    ]
   },
   {
@@ -133,6 +154,13 @@
    "source": [
     "voltages"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
