refactor: move target w generating features to a func

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -15,27 +15,24 @@
    "source": [
     "import torch\n",
     "\n",
+    "from src.prog_scheme.utils import generate_target_weights\n",
+    "\n",
     "input_size = 100\n",
     "output_size = 50\n",
-    "rank = 50\n",
+    "rank = 30\n",
     "dim = input_size * output_size\n",
-    "over_sampling = 2\n",
+    "over_sampling = 10\n",
     "x_rand = False\n",
     "\n",
     "batch_size = 1\n",
     "tol = 1e-8\n",
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
-    "svd_every_k_iter = 10\n",
+    "svd_every_k_iter = 5\n",
     "read_noise_std = 0.1\n",
     "update_noise_std = 0.1\n",
     "# generate low rank matrix\n",
-    "w_target = torch.randn(input_size, output_size)\n",
-    "w_target = w_target.clamp_(-1, 1)\n",
-    "if rank < min(w_target.shape):\n",
-    "    u, s, v = torch.svd(w_target)\n",
-    "    w_target = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))\n",
-    "w_target /= w_target.abs().max()\n",
+    "w_target = generate_target_weights(input_size, output_size, rank)\n",
     "print(w_target[:5, :5])"
    ]
   },
@@ -83,8 +80,9 @@
     "rpuconfig.device.w_min = -1\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
     "rpuconfig.device.w_min_dtod = 0.01\n",
+    "rpuconfig.device.dw_min_std = 0.0\n",
     "rpuconfig.device.mult_noise = False  # additive noise\n",
-    "rpuconfig.forward.inp_res = 0\n",
+    "# rpuconfig.forward.inp_res = 0\n",
     "# rpuconfig = IdealizedPreset(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "\n",
     "rpuconf_dict = rpuconf2dict(rpuconfig, max_depth=2)\n",
@@ -351,6 +349,15 @@
     "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err_lists[2][150]"
    ]
   },
   {
