--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -75,7 +75,7 @@
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
     "rpuconfig.device.w_max = 1\n",
-    "rpuconfig.device.gamma_up = 0.5\n",
+    "rpuconfig.device.gamma_up = 0.1\n",
     "rpuconfig.device.gamma_down = 0.1\n",
     "rpuconfig.device.w_min = -1\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
@@ -322,8 +322,23 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from src.prog_scheme.utils import plot_singular_values\n",
-    "\n",
+    "def plot_singular_values(Ws: tuple[torch.Tensor]):\n",
+    "    for w in Ws:\n",
+    "        s = torch.linalg.svdvals(w.squeeze())\n",
+    "        plt.plot(s)\n",
+    "    plt.yscale(\"log\")\n",
+    "    plt.xlabel(\"Singular Value Index\")\n",
+    "    plt.ylabel(\"Singular Value\")\n",
+    "    plt.title(\"Singular Values of Weight Matrix\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "W = [w_target.T - tile_.tile.get_weights() for tile_ in tiles]\n",
     "\n",
     "plot_singular_values(W)\n",
@@ -357,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "err_lists[2][150]"
+    "err_lists[2][-1]"
    ]
   },
   {
@@ -802,7 +817,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aihw",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -816,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
