feat: Move util funcs and update tests for persistent weights

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -62,8 +62,8 @@
     "from aihwkit.simulator.presets.devices import IdealizedPresetDevice\n",
     "from aihwkit.simulator.tiles import FloatingPointTile\n",
     "\n",
+    "from src.core.aihwkit.utils import rpuconf2dict\n",
     "from src.prog_scheme.kalman import ExpDeviceEKF, LinearDeviceEKF\n",
-    "from src.prog_scheme.utils import rpuconf2dict\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=False))\n",
     "# device_cfg = ExpStepDevice()\n",
@@ -321,6 +321,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "def plot_singular_values(Ws: tuple[torch.Tensor]):\n",
     "    for w in Ws:\n",
