refactor: transition func logic of ekf and update test cases for Kalman filter
!For now, fix lqr_gain to 1 due to instability.
Refactor _summation_update(), f_jacobian_x(), and f_jacobian_u() of LinearDeviceEKF.
Deprecate _integral_update() and and remove device_update().
Add EKF test cases using taylor expansion
Minor symbol rename & formatting

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -91,15 +91,20 @@
     "        dim=dim,\n",
     "        read_noise_std=read_noise_std,\n",
     "        update_noise_std=update_noise_std,\n",
+    "        iterative_update=False,\n",
     "        **rpuconf_dict[\"device\"],\n",
     "    )\n",
     "elif rpuconfig.device.__class__ == ExpStepDevice:\n",
-    "    device_ekf = ExpDeviceEKF(\n",
-    "        dim=dim,\n",
-    "        read_noise_std=read_noise_std,\n",
-    "        update_noise_std=update_noise_std,\n",
-    "        **rpuconf_dict[\"device\"],\n",
-    "    )\n",
+    "\n",
+    "    device_ekf = None\n",
+    "    # device_ekf = ExpDeviceEKF(\n",
+    "    #     dim=dim,\n",
+    "    #     read_noise_std=read_noise_std,\n",
+    "    #     update_noise_std=update_noise_std,\n",
+    "    #     iterative_update=True,\n",
+    "    #     **rpuconf_dict[\"device\"],\n",
+    "\n",
+    "    # )\n",
     "else:\n",
     "    device_ekf = None\n",
     "    # raise NotImplementedError\n",
