ci: Change linters&formatters to ruff,

--- a/notebooks/eqprop/.old.ipynb
+++ b/notebooks/eqprop/.old.ipynb
@@ -27,10 +27,11 @@
    "outputs": [],
    "source": [
     "def load_XOR():\n",
-    "    \"\"\"load XOR dataset\n",
+    "    \"\"\"Load XOR dataset\n",
     "\n",
     "    Returns:\n",
     "        TensorDataset: _description_\n",
+    "\n",
     "    \"\"\"\n",
     "    from torch.utils.data import TensorDataset\n",
     "\n",
@@ -67,6 +68,7 @@
     "        free_Vdrops (list): _description_\n",
     "        nudged_Vdrops (list): _description_\n",
     "        loss (float): _description_\n",
+    "\n",
     "    \"\"\"\n",
     "    # setup\n",
     "    x, y = batch\n",
@@ -128,6 +130,7 @@
     "\n",
     "    Returns:\n",
     "        Tensor(1,num_classes): prediction per classes\n",
+    "\n",
     "    \"\"\"\n",
     "    x = X\n",
     "    # input_dimension = dimensions[0]\n",
@@ -155,7 +158,6 @@
    "outputs": [],
    "source": [
     "class LightningRay(L.LightningModule):\n",
-    "\n",
     "    def __init__(\n",
     "        self,\n",
     "        dims: list,\n",
@@ -198,10 +200,11 @@
     "        self.clipper = AdjustParams(L=self.SPICE_params[\"L\"], U=None)\n",
     "\n",
     "    def _hparams_tolist(self, keys=(\"alpha\", \"L\", \"U\")) -> None:\n",
-    "        \"\"\"broadcast hyperparameters to list\n",
+    "        \"\"\"Broadcast hyperparameters to list\n",
     "\n",
     "        Args:\n",
     "            keys (tuple, optional): _description_. Defaults to ('alpha', 'L', 'U').\n",
+    "\n",
     "        \"\"\"\n",
     "        assert self.SPICE_params is not None, \"hparams not set\"\n",
     "        [\n",
@@ -307,7 +310,6 @@
     "    #     [self.tb.add_histogram(name, param, self.current_epoch)for name, param in self.named_parameters()]\n",
     "\n",
     "    def test_step(self, batch, batch_idx):\n",
-    "\n",
     "        pass\n",
     "\n",
     "    # def predict_step(self, batch, batch_idx):\n",
@@ -325,7 +327,7 @@
     "\n",
     "    @staticmethod\n",
     "    def _data_preprocess(batch, num_classes=10):\n",
-    "        \"\"\"process batch data to fit in analog circuit model\n",
+    "        \"\"\"Process batch data to fit in analog circuit model\n",
     "\n",
     "        Args:\n",
     "            batch (_type_): batch dataset\n",
@@ -333,6 +335,7 @@
     "\n",
     "        Returns:\n",
     "            _type_: processed batch\n",
+    "\n",
     "        \"\"\"\n",
     "        X_batch, Y_batch = batch\n",
     "        X_batch = X_batch.view(X_batch.size(0), -1)  # == X_batch.view(-1,X_batch.size(-1)**2)\n",
