--- a/notebooks/eqprop/newton_solver.ipynb
+++ b/notebooks/eqprop/newton_solver.ipynb
@@ -750,9 +750,10 @@
     "    dim=0,\n",
     ")\n",
     "\n",
-    "def add_to_laplacian(Lap:torch.Tensor, A: torch.Tensor):\n",
+    "\n",
+    "def add_to_laplacian(Lap: torch.Tensor, A: torch.Tensor):\n",
     "    m, n = A.shape\n",
-    "    Lap[:-m,:-n] += torch.diag(A.sum(dim=1)\n",
+    "    Lap[:-m, :-n] += torch.diag(A.sum(dim=1))\n",
     "    return torch.cat(\n",
     "        [\n",
     "            torch.cat([torch.diag(A.sum(dim=1)), -A], dim=1),\n",
@@ -760,6 +761,7 @@
     "        ],\n",
     "        dim=0,\n",
     "    )\n",
+    "\n",
     "\n",
     "for _ in range(3):\n",
     "    A = torch.randn(3, 3)\n",
@@ -837,14 +839,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
-    "\n",
     "import torch\n",
     "\n",
     "# Your functions here...\n",
     "\n",
     "\n",
-    "def generate_block_tridiagonal(n: int, block_size: int) -> List[torch.Tensor]:\n",
+    "def generate_block_tridiagonal(n: int, block_size: int) -> list[torch.Tensor]:\n",
     "    \"\"\"Generate a random block tridiagonal matrix.\"\"\"\n",
     "    blocks = [torch.randn(block_size, block_size) for _ in range(n)]\n",
     "    for block in blocks:\n",
@@ -1045,8 +1045,8 @@
     "n = 3\n",
     "A = np.random.randn(n, n)\n",
     "B = A @ A.T\n",
-    "l, v = sla.eigh(B)\n",
-    "C = B - l[0] * v[:, 0:1] @ [v[:, 0]]"
+    "left, v = sla.eigh(B)\n",
+    "C = B - left[0] * v[:, 0:1] @ [v[:, 0]]"
    ]
   },
   {
@@ -1177,7 +1177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C = B - l[0] * v[:, 0:1] @ [v[:, 0]]"
+    "C = B - left[0] * v[:, 0:1] @ [v[:, 0]]"
    ]
   },
   {
