--- a/notebooks/eqprop/playground.ipynb
+++ b/notebooks/eqprop/playground.ipynb
@@ -267,13 +267,13 @@
     "import torch\n",
     "\n",
     "A = torch.rand((2, 3))\n",
-    "v = torch.ones((3))  # row vector\n",
+    "v = torch.ones(3)  # row vector\n",
     "print(A)\n",
     "print(v)\n",
     "A += v\n",
     "print(A)\n",
     "\n",
-    "v = torch.ones((3))\n",
+    "v = torch.ones(3)\n",
     "print(A.T + v)  # error"
    ]
   },
@@ -371,7 +371,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "x = torch.rand((4))  # batch_size x input_dim\n",
+    "x = torch.rand(4)  # batch_size x input_dim\n",
     "W = torch.rand((3, 4))  # output_dim x input_dim\n",
     "\n",
     "y = torch.einsum(\"...i,oi->...o\", x, W)"
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = torch.rand((7))"
+    "y = torch.rand(7)"
    ]
   },
   {
@@ -796,7 +796,7 @@
     "\n",
     "class ResBlock(nn.Module):\n",
     "    def __init__(self, in_channels, out_channels, kernel_size, stride, padding):\n",
-    "        super(ResBlock, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.conv1 = nn.Conv2d(\n",
     "            in_channels, out_channels, kernel_size, stride=stride, padding=padding\n",
     "        )\n",
