--- a/src/prog_scheme/prog-scheme-sweep.ipynb
+++ b/src/prog_scheme/prog-scheme-sweep.ipynb
@@ -2,37 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb\n",
-    "import torch\n",
-    "from src.prog_scheme.utils import generate_target_weights, program_n_log\n",
-    "from aihwkit.simulator.configs import SingleRPUConfig\n",
-    "from aihwkit.simulator.configs.devices import LinearStepDevice\n",
-    "from aihwkit.simulator.configs.utils import InputRangeParameter, PrePostProcessingParameter, UpdateParameters\n",
-    "from aihwkit.simulator.parameters.enums import PulseType\n",
-    "from aihwkit.simulator.tiles.analog import AnalogTile\n",
-    "from torch import Tensor, eye\n",
-    "from torch.autograd import no_grad\n",
-    "from torch.linalg import lstsq\n",
-    "import matplotlib.pyplot as plt\n",
     "import copy\n",
-    "from typing import Optional, Tuple\n"
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import wandb\n",
+    "from aihwkit.simulator.configs.utils import (\n",
+    "    InputRangeParameter,\n",
+    "    PrePostProcessingParameter,\n",
+    "    UpdateParameters,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import wandb\n",
-    "import copy\n",
-    "import matplotlib.pyplot as plt\n",
-    "from typing import Any, List, Optional, Tuple, Union\n",
     "from torch import Tensor, eye\n",
     "from torch.autograd import no_grad\n",
     "from torch.linalg import lstsq"
@@ -40,11 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.prog_scheme.utils import generate_target_weights, program_n_log,rpuconf2dict\n",
     "from aihwkit.simulator.configs import FloatingPointRPUConfig, SingleRPUConfig\n",
     "from aihwkit.simulator.configs.devices import (\n",
     "    ConstantStepDevice,\n",
@@ -55,23 +45,16 @@
     "    LinearStepDevice,\n",
     "    SimpleDriftParameter,\n",
     ")\n",
-    "from aihwkit.simulator.configs.utils import (\n",
-    "    InputRangeParameter,\n",
-    "    PrePostProcessingParameter,\n",
-    "    UpdateParameters,\n",
-    ")\n",
     "from aihwkit.simulator.parameters.enums import PulseType\n",
     "from aihwkit.simulator.presets.configs import IdealizedPreset, PCMPreset, ReRamSBPreset\n",
     "from aihwkit.simulator.presets.devices import IdealizedPresetDevice\n",
     "from aihwkit.simulator.tiles import FloatingPointTile\n",
-    "\n",
-    "from src.prog_scheme.kalman import ExpDeviceEKF, LinearDeviceEKF\n",
-    "\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
-    "\n",
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
-    "from src.prog_scheme.program_methods import gdp2, svd, svd_ekf_lqg, svd_kf"
+    "from src.prog_scheme.kalman import ExpDeviceEKF, LinearDeviceEKF\n",
+    "from src.prog_scheme.program_methods import gdp2, svd, svd_ekf_lqg, svd_kf\n",
+    "from src.prog_scheme.utils import generate_target_weights, program_n_log, rpuconf2dict"
    ]
   },
   {
@@ -83,20 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class customread_tile(AnalogTile):\n",
     "    @no_grad()\n",
     "    def read_weights_(\n",
     "        self,\n",
     "        apply_weight_scaling: bool = False,\n",
-    "        x_values: Optional[Tensor] = None,\n",
+    "        x_values: Tensor | None = None,\n",
     "        x_rand: bool = False,\n",
     "        over_sampling: int = 10,\n",
-    "    ) -> Tuple[Tensor, Optional[Tensor]]:\n",
+    "    ) -> tuple[Tensor, Tensor | None]:\n",
     "        \"\"\"Reads the weights (and biases) in a realistic manner\n",
     "        by using the forward pass for weights readout.\n",
     "\n",
@@ -108,7 +90,6 @@
     "        using random inputs using the analog forward pass.\n",
     "\n",
     "        Note:\n",
-    "\n",
     "            If the tile includes digital periphery (e.g. out scaling),\n",
     "            these will be applied. Thus this weight is the logical\n",
     "            weights that correspond to the weights in an FP network.\n",
@@ -139,6 +120,7 @@
     "\n",
     "        Raises:\n",
     "            TileError: in case wrong code usage of TileWithPeriphery\n",
+    "\n",
     "        \"\"\"\n",
     "        dtype = self.get_dtype()\n",
     "        if x_values is None:\n",
@@ -189,40 +171,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
     "    # Define default parameters\n",
     "    default_config = {\n",
-    "        'input_size': 100,\n",
-    "        'output_size': 50,\n",
-    "        'rank': 50,\n",
-    "        'over_sampling': 10,\n",
-    "        'x_rand': False,\n",
-    "        'batch_size': 1,\n",
-    "        'tol': 1e-8,\n",
-    "        'max_iter': 1000,\n",
-    "        'norm_type': \"fro\",\n",
-    "        'svd_every_k_iter': 5,\n",
-    "        'read_noise_std': 0.1,\n",
-    "        'update_noise_std': 0.1,\n",
-    "        'w_init': 0.01,\n",
-    "        'gamma_up': 0.1,\n",
-    "        'gamma_down': 0.1,\n",
-    "        'desired_bl': 127,\n",
-    "        'w_max': 1,\n",
-    "        'w_min': -1,\n",
+    "        \"input_size\": 100,\n",
+    "        \"output_size\": 50,\n",
+    "        \"rank\": 50,\n",
+    "        \"over_sampling\": 10,\n",
+    "        \"x_rand\": False,\n",
+    "        \"batch_size\": 1,\n",
+    "        \"tol\": 1e-8,\n",
+    "        \"max_iter\": 1000,\n",
+    "        \"norm_type\": \"fro\",\n",
+    "        \"svd_every_k_iter\": 5,\n",
+    "        \"read_noise_std\": 0.1,\n",
+    "        \"update_noise_std\": 0.1,\n",
+    "        \"w_init\": 0.01,\n",
+    "        \"gamma_up\": 0.1,\n",
+    "        \"gamma_down\": 0.1,\n",
+    "        \"desired_bl\": 127,\n",
+    "        \"w_max\": 1,\n",
+    "        \"w_min\": -1,\n",
     "    }\n",
-    "\n",
-    "\n",
     "\n",
     "    # Initialize wandb\n",
     "    wandb.init(config=default_config)\n",
     "    config = wandb.config\n",
-    "\n",
-    "\n",
     "\n",
     "    # Extract parameters from wandb.config\n",
     "    input_size = config.input_size\n",
@@ -306,7 +284,7 @@
     "    # atile3 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
     "    atile3 = copy.deepcopy(atile)\n",
     "    atile4 = copy.deepcopy(atile)\n",
-    "    \n",
+    "\n",
     "    atile.program_weights = gdp2.__get__(atile, TileWithPeriphery)\n",
     "    atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
     "    atile3.program_weights = svd_kf.__get__(atile3, TileWithPeriphery)\n",
@@ -330,9 +308,7 @@
     "    plt.legend()\n",
     "    plt.savefig(\"error_plot.png\")\n",
     "    wandb.log({\"Error Plot\": wandb.Image(\"error_plot.png\")})\n",
-    "    plt.close()\n",
-    "    \n",
-    " "
+    "    plt.close()"
    ]
   },
   {
@@ -348,22 +324,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   \n",
-    "#sweep config 설정    \n",
+    "# sweep config 설정\n",
     "sweep_config = {\n",
-    "    'method': 'grid',  # 랜덤 서치를 위해서는 'random' 사용\n",
-    "    'parameters': {\n",
-    "      'rank': {\n",
-    "            'values': [10, 20, 30, 40, 50]\n",
-    "        },\n",
-    "        'svd_every_k_iter': {\n",
-    "            'values': [1, 5, 10]\n",
-    "        }\n",
-    "    }\n",
+    "    \"method\": \"grid\",  # 랜덤 서치를 위해서는 'random' 사용\n",
+    "    \"parameters\": {\n",
+    "        \"rank\": {\"values\": [10, 20, 30, 40, 50]},\n",
+    "        \"svd_every_k_iter\": {\"values\": [1, 5, 10]},\n",
+    "    },\n",
     "}\n",
     "\n",
     "# Sweep 실행\n",
-    "sweep_id = wandb.sweep(sweep_config, project='prog-scheme-sweep')\n",
+    "sweep_id = wandb.sweep(sweep_config, project=\"prog-scheme-sweep\")\n",
     "wandb.agent(sweep_id, function=main)"
    ]
   },
