--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -95,7 +95,6 @@
     "        **rpuconf_dict[\"device\"],\n",
     "    )\n",
     "elif rpuconfig.device.__class__ == ExpStepDevice:\n",
-    "\n",
     "    device_ekf = None\n",
     "    # device_ekf = ExpDeviceEKF(\n",
     "    #     dim=dim,\n",
@@ -134,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Any, List, Optional, Tuple, Union\n",
+    "from typing import Any\n",
     "\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "from torch import Tensor, eye\n",
@@ -147,10 +146,10 @@
     "    def read_weights_(\n",
     "        self,\n",
     "        apply_weight_scaling: bool = False,\n",
-    "        x_values: Optional[Tensor] = None,\n",
+    "        x_values: Tensor | None = None,\n",
     "        x_rand: bool = False,\n",
     "        over_sampling: int = 10,\n",
-    "    ) -> Tuple[Tensor, Optional[Tensor]]:\n",
+    "    ) -> tuple[Tensor, Tensor | None]:\n",
     "        \"\"\"Reads the weights (and biases) in a realistic manner\n",
     "        by using the forward pass for weights readout.\n",
     "\n",
@@ -162,7 +161,6 @@
     "        using random inputs using the analog forward pass.\n",
     "\n",
     "        Note:\n",
-    "\n",
     "            If the tile includes digital periphery (e.g. out scaling),\n",
     "            these will be applied. Thus this weight is the logical\n",
     "            weights that correspond to the weights in an FP network.\n",
@@ -193,6 +191,7 @@
     "\n",
     "        Raises:\n",
     "            TileError: in case wrong code usage of TileWithPeriphery\n",
+    "\n",
     "        \"\"\"\n",
     "        dtype = self.get_dtype()\n",
     "        if x_values is None:\n",
@@ -368,7 +367,7 @@
     "\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
-    "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
+    "plt.title(f\"Error vs Iteration @ {input_size}x{output_size}, rank={rank}\")\n",
     "plt.show()"
    ]
   },
@@ -617,9 +616,7 @@
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"Nuclear norm of weight error\")\n",
     "plt.title(\n",
-    "    \"{}x{} rank={} matrix with {}\".format(\n",
-    "        input_size, output_size, rank, atile.rpu_config.device.__class__.__name__\n",
-    "    )\n",
+    "    f\"{input_size}x{output_size} rank={rank} matrix with {atile.rpu_config.device.__class__.__name__}\"\n",
     ")"
    ]
   },
