--- a/notebooks/3.0-lhr-compare-grad-cosine-similarity.ipynb
+++ b/notebooks/3.0-lhr-compare-grad-cosine-similarity.ipynb
@@ -26,7 +26,7 @@
     "# 모델 정의\n",
     "class SimpleModel(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(SimpleModel, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.linear = nn.Sequential(nn.Linear(10, 3), nn.ReLU(), nn.Linear(3, 1))\n",
     "\n",
     "    def forward(self, x):\n",
