refactor program methods

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -21,10 +21,10 @@
     "output_size = 50\n",
     "rank = 30\n",
     "dim = input_size * output_size\n",
-    "over_sampling = 10\n",
+    "over_sampling = 1\n",
     "x_rand = False\n",
     "\n",
-    "batch_size = 1\n",
+    "batch_size = 3\n",
     "tol = 1e-8\n",
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
@@ -63,7 +63,7 @@
     "from aihwkit.simulator.tiles import FloatingPointTile\n",
     "\n",
     "from src.core.aihwkit.utils import rpuconf2dict\n",
-    "from src.prog_scheme.kalman import ExpDeviceEKF, LinearDeviceEKF\n",
+    "from src.prog_scheme.kalman import DeviceKF, ExpDeviceEKF, LinearDeviceEKF\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=False))\n",
     "# device_cfg = ExpStepDevice()\n",
@@ -109,11 +109,13 @@
     "    device_ekf = None\n",
     "    # raise NotImplementedError\n",
     "\n",
+    "fnc = DeviceKF(dim, read_noise_std, update_noise_std)\n",
+    "\n",
     "conf = {\n",
     "    **rpuconf_dict,\n",
     "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
     "    \"methods\": {\n",
-    "        \"device_ekf\": device_ekf,\n",
+    "        \"fnc\": None,\n",
     "        \"tolerance\": tol,\n",
     "        \"max_iter\": max_iter,\n",
     "        \"batch_size\": batch_size,\n",
@@ -126,6 +128,15 @@
     "        \"x_rand\": x_rand,\n",
     "    },\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device_ekf"
    ]
   },
   {
@@ -279,15 +290,19 @@
    "source": [
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
-    "from src.prog_scheme.program_methods import gdp2, svd, svd_ekf_lqg, svd_kf\n",
+    "from src.prog_scheme.program_methods import GDP, SVD\n",
     "\n",
     "# enroll the programming methods\n",
-    "atile.program_weights = gdp2.__get__(atile, TileWithPeriphery)\n",
-    "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
-    "atile3.program_weights = svd_kf.__get__(atile3, TileWithPeriphery)\n",
-    "atile4.program_weights = svd_ekf_lqg.__get__(atile4, TileWithPeriphery)\n",
-    "tiles = [atile, atile2, atile3]\n",
-    "tiles.append(atile4) if device_ekf is not None else None\n",
+    "atile.program_weights = GDP.call_Program_Method.__get__(atile, TileWithPeriphery)\n",
+    "atile.read_weights_ = GDP.read_weights_.__get__(atile, TileWithPeriphery)\n",
+    "atile.init_setup = GDP.init_setup.__get__(atile, TileWithPeriphery)\n",
+    "\n",
+    "atile2.program_weights = SVD.call_Program_Method.__get__(atile, TileWithPeriphery)\n",
+    "atile2.read_weights_ = SVD.read_weights_.__get__(atile, TileWithPeriphery)\n",
+    "atile2.init_setup = SVD.init_setup.__get__(atile, TileWithPeriphery)\n",
+    "\n",
+    "tiles = [atile, atile2]\n",
+    "# tiles.append(atile4) if device_ekf is not None else None\n",
     "method_names = [t.program_weights.__name__ for t in tiles]"
    ]
   },
@@ -301,6 +316,20 @@
     "\n",
     "err_lists = program_n_log(tiles, w_target.T, conf.get(\"methods\", {}))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf.get(\"methods\", {})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -378,64 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "err_lists[2][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weight_diffs = torch.stack(atile2.actual_weight_updates)\n",
-    "updated_weights = atile2.initial_weights + weight_diffs.cumsum(dim=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w_final = atile2.tile.get_weights()\n",
-    "w_target_ = atile2.target_weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w_target_[:5, :5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.allclose(w_target.T, w_target_, atol=1e-8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for w in updated_weights[10:40:3]:\n",
-    "    w_diff = w_target.T - w.squeeze()\n",
-    "    s = torch.linalg.svdvals(w_diff)\n",
-    "    plt.plot(s)\n",
-    "    print(f\"{torch.linalg.norm(w_diff, ord='fro'):.4e}\")\n",
-    "plt.yscale(\"log\")\n",
-    "plt.xlabel(\"Singular Value Index\")\n",
-    "plt.ylabel(\"Singular Value\")\n",
-    "plt.title(\"Singular Values of Weight Matrix\")\n",
-    "plt.legend(range(10, 40, 3))\n",
-    "plt.show()"
+    "err"
    ]
   },
   {
@@ -586,15 +558,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.allclose(svd_result, pca_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from src.prog_scheme.utils import extract_error\n",
     "from src.utils.logging_utils import LogCapture"
    ]
@@ -678,7 +641,8 @@
     "from aihwkit.simulator.tiles.custom import CustomTile\n",
     "\n",
     "ctile = CustomTile(output_size, input_size)\n",
-    "ctile.get_weights(realistic=True)"
+    "ctile.get_weights(realistic=True)\n",
+    "ctile2 = CustomTile(output_size, input_size)"
    ]
   },
   {
@@ -696,11 +660,11 @@
    "source": [
     "from src.prog_scheme.realistic import RealisticTile, RPUConfigwithProgram\n",
     "\n",
-    "rpu_config = RPUConfigwithProgram(program_weights=gdp2)\n",
-    "ctile = RealisticTile(output_size, input_size, rpu_config=rpu_config)\n",
+    "# rpu_config = RPUConfigwithProgram(program_weights=gdp2)\n",
+    "# ctile = RealisticTile(output_size, input_size, rpu_config=rpu_config)\n",
     "\n",
-    "rpu_config2 = RPUConfigwithProgram(program_weights=svd)\n",
-    "ctile2 = RealisticTile(output_size, input_size, rpu_config=rpu_config2)"
+    "# rpu_config2 = RPUConfigwithProgram(program_weights=svd)\n",
+    "# ctile2 = RealisticTile(output_size, input_size, rpu_config=rpu_config2)"
    ]
   },
   {
@@ -709,7 +673,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(rpu_config)"
+    "# print(rpu_config)"
    ]
   },
   {
@@ -823,7 +787,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "NMDL",
    "language": "python",
    "name": "python3"
   },
