refactor: streamline program methods

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -21,10 +21,10 @@
     "output_size = 50\n",
     "rank = 30\n",
     "dim = input_size * output_size\n",
-    "over_sampling = 1\n",
+    "over_sampling = 10\n",
     "x_rand = False\n",
     "\n",
-    "batch_size = 3\n",
+    "batch_size = 1\n",
     "tol = 1e-8\n",
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
@@ -177,17 +177,17 @@
     "from src.prog_scheme.program_methods import GDP, SVD\n",
     "\n",
     "# enroll the programming methods\n",
-    "atile.program_weights = GDP.call_Program_Method.__get__(atile, TileWithPeriphery)\n",
+    "atile.program_weights = GDP.program_weights.__get__(atile, TileWithPeriphery)\n",
     "atile.read_weights_ = GDP.read_weights_.__get__(atile, TileWithPeriphery)\n",
     "atile.init_setup = GDP.init_setup.__get__(atile, TileWithPeriphery)\n",
     "\n",
-    "atile2.program_weights = SVD.call_Program_Method.__get__(atile, TileWithPeriphery)\n",
+    "atile2.program_weights = SVD.program_weights.__get__(atile, TileWithPeriphery)\n",
     "atile2.read_weights_ = SVD.read_weights_.__get__(atile, TileWithPeriphery)\n",
     "atile2.init_setup = SVD.init_setup.__get__(atile, TileWithPeriphery)\n",
     "\n",
     "tiles = [atile, atile2]\n",
     "# tiles.append(atile4) if device_ekf is not None else None\n",
-    "method_names = [t.program_weights.__name__ for t in tiles]"
+    "method_names = [\"gdp\", \"svd\"]"
    ]
   },
   {
@@ -645,7 +645,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NMDL",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
