refactor: make visuzalization in parallel and rename input_percent to input_ratio

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -63,7 +63,6 @@
     "from aihwkit.simulator.tiles import FloatingPointTile\n",
     "\n",
     "from src.core.aihwkit.utils import rpuconf2dict\n",
-    "from src.prog_scheme.kalman import DeviceKF, ExpDeviceEKF, LinearDeviceEKF\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=False))\n",
     "# device_cfg = ExpStepDevice()\n",
@@ -86,35 +85,11 @@
     "# rpuconfig = IdealizedPreset(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
     "\n",
     "rpuconf_dict = rpuconf2dict(rpuconfig, max_depth=2)\n",
-    "if rpuconfig.device.__class__ == LinearStepDevice:\n",
-    "    device_ekf = LinearDeviceEKF(\n",
-    "        dim=dim,\n",
-    "        read_noise_std=read_noise_std,\n",
-    "        update_noise_std=update_noise_std,\n",
-    "        iterative_update=False,\n",
-    "        **rpuconf_dict[\"device\"],\n",
-    "    )\n",
-    "elif rpuconfig.device.__class__ == ExpStepDevice:\n",
-    "    device_ekf = None\n",
-    "    # device_ekf = ExpDeviceEKF(\n",
-    "    #     dim=dim,\n",
-    "    #     read_noise_std=read_noise_std,\n",
-    "    #     update_noise_std=update_noise_std,\n",
-    "    #     iterative_update=True,\n",
-    "    #     **rpuconf_dict[\"device\"],\n",
-    "\n",
-    "    # )\n",
-    "else:\n",
-    "    device_ekf = None\n",
-    "    # raise NotImplementedError\n",
-    "\n",
-    "fnc = DeviceKF(dim, read_noise_std, update_noise_std)\n",
     "\n",
     "conf = {\n",
     "    **rpuconf_dict,\n",
     "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
     "    \"methods\": {\n",
-    "        \"fnc\": None,\n",
     "        \"tolerance\": tol,\n",
     "        \"max_iter\": max_iter,\n",
     "        \"batch_size\": batch_size,\n",
@@ -163,6 +138,7 @@
     "atile3 = copy.deepcopy(atile)\n",
     "atile4 = copy.deepcopy(atile)\n",
     "# atile3.load_state_dict(atile_dic, assign=True)\n",
+    "tiles = [atile, atile2, atile3, atile4]\n",
     "print(atile.tile.get_info())"
    ]
   },
@@ -177,17 +153,13 @@
     "from src.prog_scheme.program_methods import GDP, SVD\n",
     "\n",
     "# enroll the programming methods\n",
-    "atile.program_weights = GDP.program_weights.__get__(atile, TileWithPeriphery)\n",
-    "atile.read_weights_ = GDP.read_weights_.__get__(atile, TileWithPeriphery)\n",
-    "atile.init_setup = GDP.init_setup.__get__(atile, TileWithPeriphery)\n",
+    "for tile, method in zip(tiles, [GDP, SVD, SVD, SVD]):\n",
+    "    tile.program_weights = method.program_weights.__get__(tile, TileWithPeriphery)\n",
+    "    tile.read_weights_ = method.read_weights_.__get__(tile, TileWithPeriphery)\n",
+    "    tile.init_setup = method.init_setup.__get__(tile, TileWithPeriphery)\n",
     "\n",
-    "atile2.program_weights = SVD.program_weights.__get__(atile, TileWithPeriphery)\n",
-    "atile2.read_weights_ = SVD.read_weights_.__get__(atile, TileWithPeriphery)\n",
-    "atile2.init_setup = SVD.init_setup.__get__(atile, TileWithPeriphery)\n",
-    "\n",
-    "tiles = [atile, atile2]\n",
     "# tiles.append(atile4) if device_ekf is not None else None\n",
-    "method_names = [\"gdp\", \"svd\"]"
+    "method_names = [\"gdp\", \"svd\", \"svd-kf\", \"svd-ekf\"]"
    ]
   },
   {
@@ -196,9 +168,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.prog_scheme.utils import program_n_log\n",
+    "import time\n",
     "\n",
-    "err_lists = program_n_log(tiles, w_target.T, conf.get(\"methods\", {}))"
+    "from src.prog_scheme.kalman import DeviceKF, LinearDeviceEKF\n",
+    "from src.prog_scheme.utils import extract_error\n",
+    "from src.utils.logging_utils import LogCapture\n",
+    "\n",
+    "target_weight = w_target.T\n",
+    "err_lists = []\n",
+    "method_kwargs = conf[\"methods\"].copy()\n",
+    "for idx, tile in enumerate(tiles):\n",
+    "    if method_names[idx] == \"gdp\":\n",
+    "        fnc = None\n",
+    "    elif method_names[idx] == \"svd\":\n",
+    "        fnc = None\n",
+    "    elif method_names[idx] == \"svd-kf\":\n",
+    "        fnc = DeviceKF(dim=dim, read_noise_std=read_noise_std, update_noise_std=update_noise_std)\n",
+    "    elif method_names[idx] == \"svd-ekf\" and tile:\n",
+    "        fnc = LinearDeviceEKF(\n",
+    "            dim=dim,\n",
+    "            read_noise_std=read_noise_std,\n",
+    "            update_noise_std=update_noise_std,\n",
+    "            iterative_update=False,\n",
+    "            **rpuconf_dict[\"device\"],\n",
+    "        )\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown method name: {method_names[idx]}\")\n",
+    "    method_kwargs.update({\"fnc\": fnc})\n",
+    "    with LogCapture() as logc:\n",
+    "        # tile.tile.set_weights(target_weight)\n",
+    "        tile.target_weights = target_weight.clone()\n",
+    "        start = time.time()\n",
+    "        tile.program_weights(tile, **method_kwargs)\n",
+    "        print(f\"Programming time: {time.time() - start:.2f}s\")\n",
+    "        log = logc.get_log_list()\n",
+    "    err_list = extract_error(log)\n",
+    "    err_lists.append(err_list)"
    ]
   },
   {
@@ -262,15 +267,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "err"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -285,7 +281,7 @@
    "source": [
     "import wandb\n",
     "\n",
-    "conf[\"methods\"][\"device_ekf\"] = conf[\"methods\"][\"device_ekf\"].__class__.__name__\n",
+    "# conf[\"methods\"][\"fnc\"] = conf[\"methods\"][\"fnc\"].__class__.__name__\n",
     "with wandb.init(project=\"prog-scheme\", entity=\"spk\", config=conf, dir=\"../../logs\") as run:\n",
     "    # Determine the maximum length\n",
     "\n",
